--- a/css/color.css
+++ b/css/color.css
@@ -10,6 +10,10 @@
     background-color: #4E8F9F;
 }
 
+.green-bg{
+    background-color: #A6FF00;
+}
+
 .secondery-bg-h{
     background-color: #4E8F9F;
 }
