--- a/css/color.css
+++ b/css/color.css
@@ -14,6 +14,13 @@
     background-color: #A6FF00;
 }
 
+.color-h{
+    color: red;
+}
+.color-h:hovre{
+    color: #01CBFF;
+}
+
 .optional-bg{
     background-color: #fd79a8;
 }
@@ -42,6 +49,11 @@
     color: #b2bec3;
 }
 
+.bg-dk-light{
+    background-color: #b2bec3;
+}
+
+
 .f-color-mid-dark{
     color: #636e72;
 }
@@ -52,4 +64,8 @@
 
 .f-color-black{
     color: #2d3436;
+}
+
+.color-y{
+    color: yellow;
 }
