--- a/css/style.css
+++ b/css/style.css
@@ -87,3 +87,105 @@
 .ad-bg:hover{
     box-shadow: 2px 3px 4px 3px #4E8F9F;
 }
+/* Banner img */
+#banner-img:hover{
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+}
+
+/* footer section */
+.footer-heding{
+    border-bottom: 3px solid white;
+    width: 100px;
+    transition: 0.6s;
+}
+.footer-heding:hover{
+    color: white;
+    border-bottom: 3px solid black;
+}
+.footer-logo{
+    background-color: #4E8F9F;
+    border: none;
+    padding: 11px 11px;
+}
+.footer-text{
+    font-weight: bold;
+    text-align: start;
+}
+.footer-link i{
+    background-color: #4E8F9F;
+    font-size: 18px;
+    display: inline-block;
+    color: white;
+    padding: 10px 10px;
+    border-radius: 3px;
+    transition-duration: .9s;
+    transition-delay: .8s;
+    margin: 0px 2px;
+    transition: 0.5s;
+    overflow: hidden;
+}
+.footer-link i:hover{
+    transform: rotate(360deg);
+    /* transform: translate(50%, 50%); */
+    padding: 15px 15px;
+}
+.link-s{
+    width: 131px;
+}
+.footer-l{
+    color: black;
+    font-weight: bold;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #01CBFF;
+}
+.footer-l:hover{
+    color: white;
+    border-bottom: 1px solid #4E8F9F;
+}
+.contactu-s{
+    width: 120px;
+}
+.footer-sub input{
+    border: none;
+    border-radius: 5px;
+    background-color: #4E8F9F;
+    color: white;
+    padding: 0px 15px;
+    height: 45px;
+    width: 80%;
+    transition: 0.5s;
+    align-items: center;
+}
+.footer-sub input:hover{
+    background-color: #A6FF00;
+}
+.sub-btn{
+    background-color: #A6FF00;
+    height: 45px;
+    color: white;
+    font-size: 18px;
+    border-radius: 5px 5px 5px 5px;
+    display: inline-block;
+    padding: 10px 13px;
+}
+
+.sub-btn:hover{
+    background-color: #4E8F9F;
+    color: #01CBFF;
+}
+/* Copyright Section */
+.cp-section{
+    overflow: hidden;
+    background-color: #01CBFF;
+}
+.copyright-s{
+    color: white;
+}
+.copyright-s a{
+    color: ;
+    font-weight: bold;
+}
+.copyright-s a:hover{
+    color: red;
+}
