--- a/css/style.css
+++ b/css/style.css
@@ -1,191 +1,208 @@
-/* Custom CSS */
-@import url(./font.css);
-@import url(./global.css); 
-@import url(./color.css);
-
-/* Top Header Secion */
-.t-header-hover{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     transition: 0.5s;
-    font-weight: bold;
 }
-.t-header-hover:hover{
-    color: black;
+.c-green{
+    color: #309255;
 }
-
-/* Nav & Logo Section */
-.logo{
-    background-color: #01CBFF;
-    padding: 4px 7px;
-    font-weight: bold;
-    border-radius: 22px 3px 22px 3px;
-    border: 1px solid black;
-}
-.first-logo{
+.c-white{
     color: white;
 }
-.last-logo{
-    color: black;
+.c-light{
+    background-color: #EEFBF3;
 }
-.add-t-cart{
-    font-size: 20px;
+a{
+    text-decoration: none;
+}
+a:hover{
+    color: #212832;
 }
 
-/* Slaider Section */
-.s-icon{
-    padding: 10px 17px;
-    background-color: white;
+/* first section css */
+.first-s{
+    background-color: #212832;
+    color: white;
+}
+
+/* main menu/nav */
+.m-menu{
+    border-radius: 22px;
+}
+.menu-l{
+    color: #212832;
+    font-weight: bold;
+    border-bottom: 2px #EEFBF3;
+}
+.menu-l:hover{
+    color: #309255;
+    border-bottom: 2px solid #309255;
+}
+.in-out{
+    border: 1px solid #309255;
+    padding: 8px 10px;
+    border-radius: 8px;
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+}
+.login{
+    background-color: #309255;
+    color: white;
+}
+.login:hover{
+    background-color: #EEFBF3;
+    color: #212832;
+}
+.register:hover{
+    background-color: #309255;
+    color: white;
+}
+/* main banner section */
+.course-btn{
+    color: white;
+    background-color: #309255;
+    border: none;
+    padding: 16px 20px;
+}
+.course-btn:hover{
+    background-color: #212832;
+    color: white;
+}
+.girl-sec{
+    background-image: url(../img/cute-g.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 10px 0px;
+}
+.animation-img{
+    background-image: url(../img/dote.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    animation: round 8s linear 0s infinite normal forwards;
+}
+.ball-r{
+    background-color: #309255;
+    color: white;
     border-radius: 50%;
-    color: salmon;
-}
-.s-icon i{
-    font-size: 44px;
-}
-
-/* Top Products */
-.product-c:hover{
-    background-color: #01CBFF;
-}
-.card{
-    border: none;
-}
-.product-c{
-    overflow: hidden;
-}
-.Big-c{
-    width: 60%;
-    height: 50%;
-}
-.product-c-img{
-    transition: all 0.3s;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    transform: scale(1);
-}
-.product-c-img:hover{
-    transform: scale(1.1);
-}
-.cart-btn{
-    border-radius: 5px;
-    color: black;
-    padding: 7px 10px;
-    background-color: #A6FF00;
-    transition: transform .4s;
-}
-.cart-btn:hover{
-    color: white;
-    background-color: #4E8F9F;
-}
-
-/* Banner ADS secton */
-.mins-ag{
-    color: #01CBFF;
-}
-.ad-bg{
-    /* border: 1px solid #4E8F9F; */
-}
-.ad-bg:hover{
-    box-shadow: 2px 3px 4px 3px #4E8F9F;
-}
-/* Banner img */
-#banner-img:hover{
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
-}
-
-/* footer section */
-.footer-heding{
-    border-bottom: 3px solid white;
     width: 100px;
-    transition: 0.6s;
+    height: 100px;
+    /* display: inline-block; */
+    border: 5px solid#80cd9d;
 }
-.footer-heding:hover{
-    color: white;
-    border-bottom: 3px solid black;
-}
-.footer-logo{
-    background-color: #4E8F9F;
-    border: none;
-    padding: 11px 11px;
-}
-.footer-text{
+.ball-r p{
     font-weight: bold;
-    text-align: start;
+    display: block;
 }
-.footer-link i{
-    background-color: #4E8F9F;
-    font-size: 18px;
-    display: inline-block;
+.ball-r:hover{
+    background-color: #212832;
+}
+/* college name & search bar */
+
+/* course's */
+.course a{
+    /* width: 10%; */
+    padding: 10px 12px;
+    border: 5px solid #80cd9d;
+    background-color: #309255;
     color: white;
-    padding: 10px 10px;
-    border-radius: 3px;
-    transition-duration: .9s;
-    transition-delay: .8s;
-    margin: 0px 2px;
+    text-decoration: none;
     transition: 0.5s;
-    overflow: hidden;
-}
-.footer-link i:hover{
-    transform: rotate(360deg);
-    /* transform: translate(50%, 50%); */
-    padding: 15px 15px;
-}
-.link-s{
-    width: 131px;
-}
-.footer-l{
-    color: black;
-    font-weight: bold;
-    margin-bottom: 5px;
-    border-bottom: 1px solid #01CBFF;
-}
-.footer-l:hover{
-    color: white;
-    border-bottom: 1px solid #4E8F9F;
-}
-.contactu-s{
-    width: 120px;
-}
-.footer-sub input{
-    border: none;
     border-radius: 5px;
-    background-color: #4E8F9F;
-    color: white;
-    padding: 0px 15px;
-    height: 45px;
-    width: 80%;
-    transition: 0.5s;
-    align-items: center;
 }
-.footer-sub input:hover{
-    background-color: #A6FF00;
-}
-.sub-btn{
-    background-color: #A6FF00;
-    height: 45px;
+.course a:hover{
+    background-color: #212832;
     color: white;
-    font-size: 18px;
-    border-radius: 5px 5px 5px 5px;
-    display: inline-block;
-    padding: 10px 13px;
 }
 
-.sub-btn:hover{
-    background-color: #4E8F9F;
-    color: #01CBFF;
+/* teachers revier blog */
+.t-card{
+    border-radius: 20px;
+    border: 2px solid #b8d6c4;
+    transition: 0.5s;
+    
 }
-/* Copyright Section */
-.cp-section{
-    overflow: hidden;
-    background-color: #01CBFF;
+.t-card:hover{
+    border: 2px solid #309255;
+    box-shadow: 0px 0px 15px 5px #80cd9d;
 }
-.copyright-s{
-    color: white;
+.f-img{
+    border-radius: 40px;
 }
-.copyright-s a{
-    color: ;
+.teacher{
+    border-radius: 50%;
+    width: 55px;
+    border: 3px solid #80cd9d;
+    height: 55px;
+}
+.dpt{
+    padding: 5px 8px;
+    border: 2px soldi #309255;
+    color: #309255;
+    background-color: #EEFBF3;
+}
+.view-more{
     font-weight: bold;
+    border: 1px solid #309255;
+    color: #212832;
+    border-radius: 4px;
+    background-color: #E7F8EE;
 }
-.copyright-s a:hover{
-    color: red;
+.view-more:hover{
+    background-color: #309255;
 }
+/* instractor section */
+.instractor-bg{
+    background-color: #E7F8EE;
+    background-image: url(../img/dote.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.t-info{
+    border-radius: 20px;
+}
+.left-d{
+    background-image: url(../img/dote.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.info-btn{
+    padding-top: 40px;
+}
+/* course option start */
+.c-opt{
+    background-color: #EEFBF3;
+    border-radius: 10px;
+}
+.c-top-dv{
+    border-radius: 8px;
+    border: 1px solid #309255;
+    color: #309255;
+    padding: 20px;
+}
+.c-opt:hover .c-top-dv{
+    color: white;
+    background-color: #309255;
+}
+/* Dawnload app */
+.dawnload-bg{
+    background-image: url(../img/g_bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.dw-btn{
+    border-radius: 5px;
+    border: 4px solid #878f9a;
+}
+.dw-btn:hover{
+    border: 4px solid rgb(83, 159, 206);
+}
+/* student review section */
+.s-rv{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 2px solid #80cd9d;
+}
+/* wh_s.png */
